--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -3,12 +3,12 @@
     x:Class="AMS.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:AMS"
-    Title="AMS">
+    xmlns:local="clr-namespace:AMS.Views"
+    Title="Phần mềm quản lý dịch vụ cho thuê">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        ContentTemplate="{DataTemplate local:LoginPage}"
+        Route="LoginPage" />
 
 </Shell>
