--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -2,14 +2,18 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AMS.Views.MainPage"
-             Title="Trang chu">
-    <VerticalStackLayout Spacing="25" Padding="30">
-        <Label Text="Đăng nhập thành công!"
-               FontSize="Large"
-               HorizontalOptions="Center" />
+             Title="Trang chủ">
+    <VerticalStackLayout Spacing="20" Padding="20">
+        <Label 
+            Text="Chào mừng đến với phần mềm quản lý cho thuê"
+            FontSize="24"
+            HorizontalOptions="Center" />
 
-        <Button Text="Dang xuat"
-                Clicked="OnLogoutClicked"
-                HorizontalOptions="Center" />
+        <Label
+            Text="Đăng nhập thành công!"
+            FontSize="18"
+            HorizontalOptions="Center" />
+
+        <!-- Thêm nội dung trang chính của bạn ở đây -->
     </VerticalStackLayout>
 </ContentPage>
